--- a/config/dealer_config.json
+++ b/config/dealer_config.json
@@ -20,6 +20,11 @@
     },
     "attrs": {
     },
+    "history": {
+      "db_params": {
+        "db": "dynamohistory"
+      }
+    },
     "target_sites": ["T3_US_MIT"],
     "target_site_occupancy": 0.93,
     "max_site_pending_fraction": 0.03,
